none Renames endpoints and demos methods
