# src/main/resources/static/swagger.yaml
@@ -24,7 +24,7 @@ tags:
   - name: languages
     description: Operations about languages
 paths:
-  /country_fetch:
+  /country:
     get:
       tags:
         - countries
@@ -40,7 +40,28 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Country'
-  /language_fetch:
+    post:
+      tags:
+        - countries
+      summary: Add a new country
+      description: Add a new country to the database
+      operationId: addCountry
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                english_name:
+                  type: string
+      responses:
+        '201':
+          description: Country added successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CountryResponse'
+  /language:
     get:
       tags:
         - languages
@@ -59,6 +80,8 @@ paths:
     post:
       tags:
         - languages
+      summary: Add a new language
+      description: Add a new language to the database
       operationId: addLanguage
       requestBody:
         content:
@@ -66,7 +89,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Language'
       responses:
-        '200':
+        '201':
           description: Language added successfully
           content:
             application/json:
@@ -74,6 +97,15 @@ paths:
                 $ref: '#/components/schemas/Language'
 components:
   schemas:
+    CountryResponse:
+      title: "CountryResponse"
+      type: "object"
+      properties:
+        id:
+          type: integer
+          format: int32
+        english_name:
+          type: string
     Country:
       title: "Country"
       type: "object"
